# karabiner-json-updater

./: .gitignore  Cargo.toml  README.md  custom.json  personal_rules.json  rustfmt.toml  update.sh
src/: condition.rs  config.rs  config_updater.rs  custom_rules.rs  custom_rules_builder.rs  from.rs  karabiner_data.rs  lib.rs  main.rs  manipulator.rs  mouse_key.rs  my_config.rs  rule.rs  set_variable.rs  to.rs  updater.rs  util.rs  value.rs  virtual_key.rs
src/config/: bundle_identifier.rs  condition.rs  config.rs  from.rs  key_code.rs  manipulator.rs  mod.rs  modifier_key.rs  mouse_key.rs  rule.rs  set_variable.rs  to.rs
src/constants/: bundle_identifier.rs  condition.rs  from.rs  key_code.rs  manipulator.rs  mod.rs  modifier_key.rs  rule.rs  set_variable.rs  to.rs
src/rule_sets/: capslock.rs  chatgpt.rs  dynalist.rs  google_chrome.rs  iterm2.rs  mod.rs  notion.rs  open_apps.rs  semicolon.rs  singlequote.rs  slack.rs  virtual_key.rs  vk1.rs  vk2.rs  vk3.rs  vscode.rs
src/updater/: updater.rs
