[package]
name = "karabiner-json-updater"
version = "0.1.0"
authors = ["Daichi Hioki <hioki.daichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_repr = "*"
anyhow = "*"
itertools = "*"
big_s = "1.0.2"
