[package]
name = "karaconf"
version = "0.1.0"
authors = ["Daichi Hioki <hioki.daichi@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
